# paper_sorrentino_ral2024_balancing_torque

./: .gitignore  CMakeLists.txt  README.md  environment.yaml
cmake/: AddInstallRPATHSupport.cmake
config/: CMakeLists.txt
config/robots/ergoCubGazeboV1_1/: blf-momentum-based-torque-control-options.ini
config/robots/ergoCubGazeboV1_1/model/: model.urdf
config/robots/ergoCubGazeboV1_1/momentum_based_torque_control/: legged_odometry.ini  whole_body_controller.ini
config/robots/ergoCubGazeboV1_1/world/: world.sdf
config/robots/ergoCubSN000/: blf-momentum-based-torque-control-options.ini
config/robots/ergoCubSN000/momentum_based_torque_control/: reference_generator.ini  sensor_bridge.ini  whole_body_controller.ini
config/robots/ergoCubSN001/: blf-momentum-based-torque-control-options.ini
config/robots/ergoCubSN001/momentum_based_torque_control/: contact_wrenches.ini  logger.ini
include/MomentumBasedTorqueControl/: Controller.h  QPproblem.h  ReferenceGenerator.h
src/: Controller.cpp  QPproblem.cpp  ReferenceGenerator.cpp  main.cpp
